--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -1,3 +1,16 @@
+nav ul{
+    display: flex;
+}
 nav li{
-    
+    list-style: none;
+    margin-left: 10px;
+    padding: 0px 20px;
+}
+nav li a{
+    text-decoration: none;
+    color: chartreuse;
+    font-size: 25px;
+}
+nav li:hover{
+    background-color: darkgoldenrod;
 }
