--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -14,7 +14,10 @@ nav li a{
 nav li:hover{
     background-color: darkgoldenrod;
 }
-
+nav > ul > li:hover > ul{
+    display: block;
+}
 .dropdown{
     display: none;
+    position: absolute;
 }
