--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -20,4 +20,5 @@ nav > ul > li:hover > ul{
 .dropdown{
     display: none;
     position: absolute;
+    background-color: rgba(255, 255, 224, 0.986);
 }
