--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -22,3 +22,6 @@ nav > ul > li:hover > ul{
     position: absolute;
     background-color: rgba(255, 255, 224, 0.986);
 }
+.dropdown li{
+    margin: 0;
+}
