--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -21,7 +21,9 @@ nav > ul > li:hover > ul{
     display: none;
     position: absolute;
     background-color: rgba(255, 255, 224, 0.986);
+    padding: 0;
 }
 .dropdown li{
+    padding: 0;
     margin: 0;
 }
